# HydraHal

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  STM32F411RETX_FLASH.ld  annotated.html  classes.html  dir_66c084e48ec2896344ad5a2863246075.html  dir_6f4f63653c835b459153829f2dc10e92.html  dir_b1338a34d296554419b8bd82c178ac92.html  dir_bfccd401955b95cf8c75461437045ac0.html  files.html  functions.html  functions_func.html  functions_vars.html  gpio_8h.html  gpio_8h_source.html  gpio__port_8h.html  gpio__port_8h_source.html  hierarchy.html  index.html  main.cpp  namespace_a_d_c1.html  namespace_a_d_c1_1_1_c_r1.html  namespace_a_d_c1_1_1_c_r2.html  namespace_a_d_c1_1_1_d_r.html  namespace_a_d_c1_1_1_h_t_r.html  namespace_a_d_c1_1_1_j_d_r1.html  namespace_a_d_c1_1_1_j_d_r2.html  namespace_a_d_c1_1_1_j_d_r3.html  namespace_a_d_c1_1_1_j_d_r4.html  namespace_a_d_c1_1_1_j_o_f_r1.html  namespace_a_d_c1_1_1_j_o_f_r2.html  namespace_a_d_c1_1_1_j_o_f_r3.html  namespace_a_d_c1_1_1_j_o_f_r4.html  namespace_a_d_c1_1_1_j_s_q_r.html  namespace_a_d_c1_1_1_l_t_r.html  namespace_a_d_c1_1_1_s_m_p_r1.html  namespace_a_d_c1_1_1_s_m_p_r2.html  namespace_a_d_c1_1_1_s_q_r1.html  (+857 more)
docs/: Doxyfile
inc/hydra_hal/core/: bit_fields.h  clk_utils.h  gpio_port.h  pin.h  reg.h  reg.hpp
inc/hydra_hal/core/peripheral_drivers/high_level_drivers/: GpioPin.h
inc/hydra_hal/core/peripheral_drivers/high_level_drivers/scripts/: generate_pins.py
inc/hydra_hal/core/peripheral_drivers/register_description_files/: RCC.xml
inc/hydra_hal/core/peripheral_drivers/register_description_files/scripts/: create_mem_mapped_struct.py  xml_parser.py
inc/hydra_hal/core/peripheral_drivers/register_mapping/: GpioPort.h  ResetClockControl.h
inc/hydra_hal/device/: GpioPort.h  Pins.h  STM32F411.svd  clock_config.h  gpio.h  peripherals.h  pins.py  reg_map_create.py  register_defs.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  (+56 more)
src/: main.cpp
tests/: CMakeLists.txt  test_gpio.cpp  test_gt.cpp  test_reg.cpp
